--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chain-registry/types": "^0.28.11",
+    "@cosmos-kit/keplr": "^2.7.2",
+    "@cosmos-kit/leap": "^2.7.2",
+    "@cosmos-kit/react": "^2.11.2",
+    "@interchain-ui/react": "^1.23.11",
     "@nibiruchain/nibijs": "^4.2.0",
+    "cosmos-kit": "^2.10.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
